# sync-manager

./: .gitignore  README.md  complete_setup_template.py  create_independent.bat  create_independent_project.py  pyproject.toml  standard_schema.py
guides/: DEVELOPERS_DEVELOPMENTS.md  README.md
guides/archive/: README_NEW.md
guides/reference/: IMPLEMENTATION.md  PROPERTY_DATA_STRUCTURE.md  SYNC_MANAGER_QUICK_REFERENCE.txt
guides/setup/: CHOOSE_YOUR_OPTION.txt  INDEPENDENT_PROJECT_GUIDE.txt  INDEPENDENT_PROJECT_README.md  INDEPENDENT_SUMMARY.md  SETUP_COMPLETE.md  START_HERE.txt  START_HERE_VISUAL.txt
guides/usage/: HOW_SYNC_WORKS.md  QUICKSTART.md  SYNC_MANAGER_USAGE_GUIDE.md
